--- a/Lesson 1 Programming basics.ipynb
+++ b/Lesson 1 Programming basics.ipynb
@@ -23,21 +23,22 @@
    "metadata": {},
    "source": [
     "## 2. Working with variable\n",
-    "With mathematics we can create expresion (eg. 2 + 3 = 5) and expresions with variable ( a + b = c) working with variables ensures that you can assign multiple values to variable. Lets work this out to a example:\n",
+    "Within mathematics we can create expresion (eg. 2 + 3 = 5) and expresions with variable ( a + b = c) working with variables ensures that you can assign multiple values to variable. Within Python this works almost the same. In Python we can assing values to variable and call the value of an variable. \n",
     "\n",
-    "a = 3\n",
-    "b = 4\n",
+    "An variable can exist of single value or can contain the result of an expresion. The example below shows how to assign a value to a variable in Python:\n",
     "\n",
-    "\n",
-    "To call and calculate with the variable we just type in the variable and the operator(+,-,/,*)\n",
-    "\n",
-    "a + b = 7\n",
+    "``a = 3``\n",
     "\n",
     "You can aslo assign tekst to a variable. To specify that the value you assign is a text we place the text with \n",
-    "\n",
     "quotes (\"\").\n",
     "\n",
-    "name = \"Erik\""
+    "``b = \"Erik\"``\n",
+    "\n",
+    "assigning an expresion to a variable can with the folowing operators (+,-,/,*)\n",
+    "\n",
+    "``b = a + c``\n",
+    "\n",
+    "To call and calculate with the variable we just type in the variable or the combination together with an operator(+,-,/,*)\n"
    ]
   },
   {
@@ -102,14 +103,13 @@
    "source": [
     "## 3. Working with Functions\n",
     "Some times you wan't to calculate different outcomes with the same variables (eg. to calculate different rectangle). \n",
-    "For the creation of a repatable process with the same variables we use a **function ** . A function consist of\n",
+    "For the creation of a repeatable process with the same variables we use a **function ** . A function consist of\n",
     "the name of the function, parameters of the function and the result of the function. \n",
     "\n",
     "**Function definition**\n",
     "\n",
-    "def calculaterectangle(length,width):\n",
-    "    \n",
-    "    print(length * width)\n",
+    "``def calculaterectangle(length,width):\n",
+    "    print(length * width)``\n",
     "    \n",
     "\n",
     "- with the **def** we define that the variable is a function\n",
@@ -160,13 +160,10 @@
     "\n",
     "**Logical test definition**\n",
     "\n",
-    "if(length == width):\n",
-    "    \n",
+    " ``if(length == width):\n",
     "    print(\"square\")\n",
-    "\n",
-    "else:\n",
-    "    \n",
-    "    print(\"rectangle\")\n",
+    " else:\n",
+    "    print(\"rectangle\")``\n",
     "\n",
     "\n",
     "- with the **if** the program nows that you start with the logical test\n",
@@ -179,7 +176,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [
     {
@@ -201,13 +198,68 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "**Exercize 4:** \n",
+    "Make a function which calculates a circle and checks if surface of the circle is not more then 25cm\n",
+    "    "
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## 5 Working with arrays\n",
+    "A array is a list containing values in a position(starting with 0). Just as the variable we can assign a value in to the array by using the **\"[]\"** (cars[\"Volvo\",\"Mercedes\" ...] , numbers[1,2,12,111 ...] ). The positions of the values are placed from 0(left) to the last number (right), this number is needes when you need a specific value of the array.The position of an value in an array is called index. Just like Excel on the top it starts with 0(headers) and ends with a realy high number. \n",
+    "\n",
+    "When calling a value in an arrray you can assign a variable to the specific index. How this works will be explained in the example below:\n",
+    "\n",
+    "**declaring array:**\n",
+    "\n",
+    "``bmw = (\"x1\",\"x2\",\"x3\",\"x4\")``\n",
+    "\n",
+    "**calling the bmw x3 from the array**\n",
+    "\n",
+    "``bmwx3 = bmw[2]``\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 2,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "'x3'"
+      ]
+     },
+     "execution_count": 2,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "bmw = (\"x1\",\"x2\",\"x3\",\"x4\")\n",
+    "bmwx3 = bmw[2]\n",
+    "bmwx3"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## 6 Working with Loops\n",
+    "Now we have worked with arrays you know that it most of the time exists of multiple values. What if we wan't to multiply all the values in the array. It will be redicules to do this by hand for every value in the array. We wan't to solve this smart. And to work smart we need a proces wich iterates over every value in an array."
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
    "metadata": {},
    "outputs": [],
-   "source": [
-    "**Exercize 4:** make a function which "
-   ]
+   "source": []
   }
  ],
  "metadata": {
